// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themer "triangles" wallpaper should list outputfiles 1`] = `
"
Files generated:

* \`themer-wallpaper-triangles-dark-1000x1000.svg\`
* \`themer-wallpaper-triangles-light-1000x1000.svg\`
"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering a given resolution should render valid SVG 1`] = `
"
            <svg width=\\"600\\" height=\\"600\\" viewBox=\\"0 0 600 600\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering a given resolution should render valid SVG 2`] = `
"
            <svg width=\\"600\\" height=\\"600\\" viewBox=\\"0 0 600 600\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering only default resolutions should render valid SVG 1`] = `
"
            <svg width=\\"2880\\" height=\\"1800\\" viewBox=\\"0 0 2880 1800\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering only default resolutions should render valid SVG 2`] = `
"
            <svg width=\\"2880\\" height=\\"1800\\" viewBox=\\"0 0 2880 1800\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering only default resolutions should render valid SVG 3`] = `
"
            <svg width=\\"750\\" height=\\"1334\\" viewBox=\\"0 0 750 1334\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given both a light and a dark theme and when rendering only default resolutions should render valid SVG 4`] = `
"
            <svg width=\\"750\\" height=\\"1334\\" viewBox=\\"0 0 750 1334\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a dark theme and when rendering a given resolution should render valid SVG 1`] = `
"
            <svg width=\\"600\\" height=\\"600\\" viewBox=\\"0 0 600 600\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a dark theme and when rendering only default resolutions should render valid SVG 1`] = `
"
            <svg width=\\"2880\\" height=\\"1800\\" viewBox=\\"0 0 2880 1800\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a dark theme and when rendering only default resolutions should render valid SVG 2`] = `
"
            <svg width=\\"750\\" height=\\"1334\\" viewBox=\\"0 0 750 1334\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #282629; }
                .triangle--light {
                  fill: #FFFCFF;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#F553BF\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FFD24A\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#26C99E\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#26C99E\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#FF4050\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#FF4050\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a light theme and when rendering a given resolution should render valid SVG 1`] = `
"
            <svg width=\\"600\\" height=\\"600\\" viewBox=\\"0 0 600 600\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a light theme and when rendering only default resolutions should render valid SVG 1`] = `
"
            <svg width=\\"2880\\" height=\\"1800\\" viewBox=\\"0 0 2880 1800\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;

exports[`themer "triangles" wallpaper when given only a light theme and when rendering only default resolutions should render valid SVG 2`] = `
"
            <svg width=\\"750\\" height=\\"1334\\" viewBox=\\"0 0 750 1334\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <style>
                .triangle--dark { fill: #FFFCFF; }
                .triangle--light {
                  fill: #282629;
                  opacity: 0.5;
                }
              </style>
              <defs>
                <filter id=\\"texture\\" filterUnits=\\"objectBoundingBox\\" x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\">
                  <feTurbulence type=\\"fractalNoise\\" baseFrequency=\\"0.4\\" numOctaves=\\"3\\" result=\\"turbulence\\" />
                  <feColorMatrix type=\\"saturate\\" values=\\"0.1\\" in=\\"turbulence\\" result=\\"desaturatedTurbulence\\" />
                  <feBlend in=\\"SourceGraphic\\" in2=\\"desaturatedTurbulence\\" mode=\\"multiply\\" result=\\"multiplied\\" />
                  <feBlend in=\\"multiplied\\" in2=\\"desaturatedTurbulence\\" mode=\\"screen\\" />
                </filter>
                <pattern id=\\"triangles\\" width=\\"24\\" height=\\"48\\" patternUnits=\\"userSpaceOnUse\\">
                  <path class=\\"triangle--dark\\" d=\\"M0,0 L24,0 L12,24 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M0,24 L12,24 L0,48 Z\\" />
                  <path class=\\"triangle--dark\\" d=\\"M12,24 L24,24 L 24,48 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M0,0 L12,24 L0,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M24,0 L24,24 L12,24 Z\\" />
                  <path class=\\"triangle--light\\" d=\\"M12,24 L24,48 L0,48 Z\\" />
                </pattern>
                <linearGradient id=\\"warm-linear\\" x1=\\"0\\" y1=\\"50%\\" x2=\\"100%\\" y2=\\"100%\\">
                  <stop stop-color=\\"#EE4EB8\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#EEBA21\\" offset=\\"100%\\" />
                </linearGradient>
                <linearGradient id=\\"cool-linear\\" x1=\\"100%\\" y1=\\"0\\" x2=\\"0\\" y2=\\"100%\\">
                  <stop stop-color=\\"#1FC598\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#1FC598\\" stop-opacity=\\"0\\" offset=\\"45%\\" />
                </linearGradient>
                <linearGradient id=\\"accent-linear\\" x1=\\"0\\" y1=\\"100%\\" x2=\\"100%\\" y2=\\"0\\">
                  <stop stop-color=\\"#F03E4D\\" offset=\\"0%\\" />
                  <stop stop-color=\\"#F03E4D\\" stop-opacity=\\"0\\" offset=\\"25%\\" />
                </linearGradient>
              </defs>
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#warm-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#cool-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#accent-linear)\\" />
              <rect x=\\"0\\" y=\\"0\\" width=\\"100%\\" height=\\"100%\\" fill=\\"url(#triangles)\\" filter=\\"url(#texture)\\" opacity=\\"0.3\\" />
            </svg>"
`;
